--- a/01.Reflection.ipynb
+++ b/01.Reflection.ipynb
@@ -16,7 +16,7 @@
     "from typing import Any, Dict, TypedDict\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "from IPython.display import Image, Markdown\n",
+    "from IPython.display import Image\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
