new deps and makefile

--- a/02.Tools.ipynb
+++ b/02.Tools.ipynb
@@ -1,6 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai.chat_models import ChatOpenAI\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from nest_asyncio import apply\n",
+    "apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generation_kwargs = {\n",
+    "    \"temperature\": 0.0,\n",
+    "    \"max_tokens\": 256,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(\n",
+    "    model=\"meta-llama/Meta-Llama-3-8B-Instruct\",\n",
+    "    openai_api_base=\"https://jjovalle99--llama3-serve-model-dev.modal.run/v1\",\n",
+    "    openai_api_key=\"EMPTY\",\n",
+    "    model_kwargs={\"stop\": [\"<|eot_id|>\", \"<|end_of_text|>\"]},\n",
+    "    **generation_kwargs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = StrOutputParser()\n",
+    "stream = (llm | parser).astream(\"What is the capital of colombia and why is Lima?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I think there may be a mistake here!\n",
+      "\n",
+      "The capital of Colombia is actually Bogotá, not Lima. Lima is the capital of Peru, a different country located in South America.\n",
+      "\n",
+      "Bogotá has been the capital of Colombia since 1819, and it is the country's largest city, with a population of over 8 million people. The city is known for its rich cultural heritage, vibrant nightlife, and stunning natural surroundings, including the Andean mountains and the Magdalena River.\n",
+      "\n",
+      "Lima, on the other hand, has been the capital of Peru since 1821, and it is the country's largest city, with a population of over 10 million people. Lima is a major cultural and economic hub in South America, known for its historic center, which is a UNESCO World Heritage Site, and its vibrant food scene, which is famous for its ceviche and other Peruvian dishes.\n",
+      "\n",
+      "So, to summarize, Bogotá is the capital of Colombia, while Lima is the capital of Peru!"
+     ]
+    }
+   ],
+   "source": [
+    "async for token in stream:\n",
+    "    print(token, end=\"\", flush=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
