--- a/02.Tools.ipynb
+++ b/02.Tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,24 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "generation_kwargs = {\n",
     "    \"temperature\": 0.0,\n",
-    "    \"max_tokens\": 256,\n",
+    "    \"max_tokens\": 512,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "llm = ChatOpenAI(\n",
-    "    model=\"meta-llama/Meta-Llama-3-8B-Instruct\",\n",
+    "    model=\"meta-llama/Meta-Llama-3-70B-Instruct\",\n",
     "    openai_api_base=\"https://jjovalle99--llama3-serve-model-dev.modal.run/v1\",\n",
     "    openai_api_key=\"EMPTY\",\n",
     "    model_kwargs={\"stop\": [\"<|eot_id|>\", \"<|end_of_text|>\"]},\n",
@@ -41,38 +41,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = StrOutputParser()\n",
-    "stream = (llm | parser).astream(\"What is the capital of colombia and why is Lima?\")"
+    "input = \"\"\"\n",
+    "1=3\n",
+    "2=3\n",
+    "3=5\n",
+    "4=4\n",
+    "5=4\n",
+    "Then, 6=?\n",
+    "Think of your response step by step. Return the final answer in a json with a key called `answer`.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = StrOutputParser()\n",
+    "stream = (llm | parser).astream(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I think there may be a mistake here!\n",
+      "A classic lateral thinking puzzle!\n",
       "\n",
-      "The capital of Colombia is actually Bogotá, not Lima. Lima is the capital of Peru, a different country located in South America.\n",
+      "Let's break it down step by step:\n",
       "\n",
-      "Bogotá has been the capital of Colombia since 1819, and it is the country's largest city, with a population of over 8 million people. The city is known for its rich cultural heritage, vibrant nightlife, and stunning natural surroundings, including the Andean mountains and the Magdalena River.\n",
+      "1. `1=3` - The number of letters in the written form of \"one\" is 3 (O-N-E).\n",
+      "2. `2=3` - The number of letters in the written form of \"two\" is 3 (T-W-O).\n",
+      "3. `3=5` - The number of letters in the written form of \"three\" is 5 (T-H-R-E-E).\n",
+      "4. `4=4` - The number of letters in the written form of \"four\" is 4 (F-O-U-R).\n",
+      "5. `5=4` - The number of letters in the written form of \"five\" is 4 (F-I-V-E).\n",
       "\n",
-      "Lima, on the other hand, has been the capital of Peru since 1821, and it is the country's largest city, with a population of over 10 million people. Lima is a major cultural and economic hub in South America, known for its historic center, which is a UNESCO World Heritage Site, and its vibrant food scene, which is famous for its ceviche and other Peruvian dishes.\n",
+      "Now, let's apply the same pattern to `6`:\n",
       "\n",
-      "So, to summarize, Bogotá is the capital of Colombia, while Lima is the capital of Peru!"
+      "6. `6=?` - The number of letters in the written form of \"six\" is 3 (S-I-X).\n",
+      "\n",
+      "So, the answer is:\n",
+      "\n",
+      "`{ \"answer\": 3 }`"
      ]
     }
    ],
    "source": [
     "async for token in stream:\n",
     "    print(token, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "class Joke(BaseModel):\n",
+    "    setup: str = Field(description=\"The setup of the joke\")\n",
+    "    punchline: str = Field(description=\"The punchline to the joke\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jjmov99/agentic-design-patterns/.venv/lib/python3.11/site-packages/langchain_core/_api/beta_decorator.py:87: LangChainBetaWarning: The function `with_structured_output` is in beta. It is actively being worked on, so the API may change.\n",
+      "  warn_beta(\n"
+     ]
+    }
+   ],
+   "source": [
+    "structured_llm = llm.with_structured_output(Joke)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structured_llm.invoke(\"Tell me a joke about cats\")"
    ]
   },
   {
